--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Boilerplate</title>
-    <link rel="stylesheet" href="./style.css" />
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="./style/reset.css" />
+    <link rel="stylesheet" href="./style/global.css" />
   </head>
   <body>
-    Hello World!
-    <script type="module" src="./script.ts"></script>
+    <section>Hello world!</section>
+    <script type="module" src="./script/script.ts"></script>
   </body>
 </html>
