💄 font family updated

--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link
+      rel="stylesheet"
+      as="style"
+      crossorigin
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard-dynamic-subset.css"
+    />
     <link rel="stylesheet" href="./style/reset.css" />
     <link rel="stylesheet" href="./style/global.css" />
   </head>
   <body>
-    <section>Hello world!</section>
+    <section>안녕하세요</section>
     <script type="module" src="./script/script.ts"></script>
   </body>
 </html>
