--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,27 @@
     <link rel="stylesheet" href="./style/global.css" />
   </head>
   <body>
-    <section>안녕하세요</section>
+    <!-- Header navigation -->
+    <nav
+      class="fixed left-0 top-0 right-0 bottom-auto z-10 bg-[#FBFBFD]/[.8] bg-[#000]/[.8] text-[#ecedee] backdrop-saturate-[180%] backdrop-blur-[20px]"
+    >
+      <div class="px-2 py-1">
+        <div class="flex justify-center items-center">
+          <ul class="flex flex-row justify-center items-center space-x-2">
+            <li><a class="block p-2" href="#">경력</a></li>
+            <li><a class="block p-2" href="#">활동</a></li>
+            <li><a class="block p-2" href="#">스킬</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- Intro -->
+    <div class="h-[100vh] w-full bg-[wheat]"></div>
+    <!-- Greeting message in white -->
+    <div class="h-[100vh] w-full bg-[white]"></div>
+    <!-- Info -->
+    <div class="h-[100vh] w-full bg-[black]"></div>
+    <!-- Close -->
     <script type="module" src="./script/script.ts"></script>
   </body>
 </html>
