💄 add hero icons

--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,6 @@
     </nav>
     <!-- Intro -->
     <div class="h-[100vh] w-full bg-[wheat]"></div>
-    <!-- Greeting message in white -->
-    <div class="h-[100vh] w-full bg-[white]"></div>
     <!-- Info -->
     <div class="info">
       <div class="w-full max-w-[50rem] m-auto relative px-5">
@@ -48,6 +46,110 @@
             비즈니스 가치를 구현하는데서 나온다고 믿습니다. 주도적으로 업무를
             진행할 수 있는 환경을 선호합니다.
           </p>
+        </div>
+        <div class="hero-logos mt-[75px] mb-[50px] sm:mt-[150px] sm:mb-[100px]">
+          <div class="relative">
+            <div
+              class="absolute top-0 left-0 right-0 bottom-0 bg-hero-logo"
+            ></div>
+            <div class="swiper max-w-[740px] m-auto overflow-hidden">
+              <div
+                class="swiper-wrapper w-fit flex flex-row items-center relative"
+              >
+                <div class="swiper-item">
+                  <img
+                    src="./images/logo/android.svg"
+                    alt="logo"
+                    aria-hidden="true"
+                  />
+                </div>
+                <div class="swiper-item">
+                  <img
+                    src="./images/logo/apple.svg"
+                    alt="logo"
+                    aria-hidden="true"
+                  />
+                </div>
+                <div class="swiper-item">
+                  <img
+                    src="./images/logo/aws.svg"
+                    alt="logo"
+                    aria-hidden="true"
+                  />
+                </div>
+                <div class="swiper-item">
+                  <img
+                    src="./images/logo/github.svg"
+                    alt="logo"
+                    aria-hidden="true"
+                  />
+                </div>
+                <div class="swiper-item">
+                  <img
+                    src="./images/logo/html.svg"
+                    alt="logo"
+                    aria-hidden="true"
+                  />
+                </div>
+                <div class="swiper-item">
+                  <img
+                    src="./images/logo/next.svg"
+                    alt="logo"
+                    aria-hidden="true"
+                  />
+                </div>
+                <div class="swiper-item">
+                  <img
+                    src="./images/logo/node.svg"
+                    alt="logo"
+                    aria-hidden="true"
+                  />
+                </div>
+                <div class="swiper-item">
+                  <img
+                    src="./images/logo/prisma.svg"
+                    alt="logo"
+                    aria-hidden="true"
+                  />
+                </div>
+                <div class="swiper-item">
+                  <img
+                    src="./images/logo/react.svg"
+                    alt="logo"
+                    aria-hidden="true"
+                  />
+                </div>
+                <div class="swiper-item">
+                  <img
+                    src="./images/logo/ruby.svg"
+                    alt="logo"
+                    aria-hidden="true"
+                  />
+                </div>
+                <div class="swiper-item">
+                  <img
+                    src="./images/logo/shopify.svg"
+                    alt="logo"
+                    aria-hidden="true"
+                  />
+                </div>
+                <div class="swiper-item">
+                  <img
+                    src="./images/logo/tailwind.svg"
+                    alt="logo"
+                    aria-hidden="true"
+                  />
+                </div>
+                <div class="swiper-item">
+                  <img
+                    src="./images/logo/typescript.svg"
+                    alt="logo"
+                    aria-hidden="true"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="w-full relative overflow-hidden">
           <!-- this is for line seperator -->
@@ -327,6 +429,6 @@
       </div>
     </div>
     <!-- Close -->
-    <script type="module" src="./script/script.ts"></script>
+    <script type="module" src="./script/script.js"></script>
   </body>
 </html>
