💄 update swiper animation

--- a/src/index.html
+++ b/src/index.html
@@ -50,102 +50,197 @@
         <div class="hero-logos mt-[75px] mb-[50px] sm:mt-[150px] sm:mb-[100px]">
           <div class="relative">
             <div
-              class="absolute top-0 left-0 right-0 bottom-0 bg-hero-logo"
+              class="absolute top-0 left-0 right-0 bottom-0 bg-hero-logo z-[1]"
             ></div>
             <div class="swiper max-w-[740px] m-auto overflow-hidden">
               <div
                 class="swiper-wrapper w-fit flex flex-row items-center relative"
               >
-                <div class="swiper-item">
-                  <img
-                    src="./images/logo/android.svg"
-                    alt="logo"
-                    aria-hidden="true"
-                  />
+                <div class="swiper-transform">
+                  <div class="swiper-item">
+                    <img
+                      src="./images/logo/android.svg"
+                      alt="logo"
+                      aria-hidden="true"
+                    />
+                  </div>
+                  <div class="swiper-item">
+                    <img
+                      src="./images/logo/apple.svg"
+                      alt="logo"
+                      aria-hidden="true"
+                    />
+                  </div>
+                  <div class="swiper-item">
+                    <img
+                      src="./images/logo/aws.svg"
+                      alt="logo"
+                      aria-hidden="true"
+                    />
+                  </div>
+                  <div class="swiper-item">
+                    <img
+                      src="./images/logo/github.svg"
+                      alt="logo"
+                      aria-hidden="true"
+                    />
+                  </div>
+                  <div class="swiper-item">
+                    <img
+                      src="./images/logo/html.svg"
+                      alt="logo"
+                      aria-hidden="true"
+                    />
+                  </div>
+                  <div class="swiper-item">
+                    <img
+                      src="./images/logo/next.svg"
+                      alt="logo"
+                      aria-hidden="true"
+                    />
+                  </div>
+                  <div class="swiper-item">
+                    <img
+                      src="./images/logo/node.svg"
+                      alt="logo"
+                      aria-hidden="true"
+                    />
+                  </div>
+                  <div class="swiper-item">
+                    <img
+                      src="./images/logo/prisma.svg"
+                      alt="logo"
+                      aria-hidden="true"
+                    />
+                  </div>
+                  <div class="swiper-item">
+                    <img
+                      src="./images/logo/react.svg"
+                      alt="logo"
+                      aria-hidden="true"
+                    />
+                  </div>
+                  <div class="swiper-item">
+                    <img
+                      src="./images/logo/ruby.svg"
+                      alt="logo"
+                      aria-hidden="true"
+                    />
+                  </div>
+                  <div class="swiper-item">
+                    <img
+                      src="./images/logo/shopify.svg"
+                      alt="logo"
+                      aria-hidden="true"
+                    />
+                  </div>
+                  <div class="swiper-item">
+                    <img
+                      src="./images/logo/tailwind.svg"
+                      alt="logo"
+                      aria-hidden="true"
+                    />
+                  </div>
+                  <div class="swiper-item">
+                    <img
+                      src="./images/logo/typescript.svg"
+                      alt="logo"
+                      aria-hidden="true"
+                    />
+                  </div>
                 </div>
-                <div class="swiper-item">
-                  <img
-                    src="./images/logo/apple.svg"
-                    alt="logo"
-                    aria-hidden="true"
-                  />
-                </div>
-                <div class="swiper-item">
-                  <img
-                    src="./images/logo/aws.svg"
-                    alt="logo"
-                    aria-hidden="true"
-                  />
-                </div>
-                <div class="swiper-item">
-                  <img
-                    src="./images/logo/github.svg"
-                    alt="logo"
-                    aria-hidden="true"
-                  />
-                </div>
-                <div class="swiper-item">
-                  <img
-                    src="./images/logo/html.svg"
-                    alt="logo"
-                    aria-hidden="true"
-                  />
-                </div>
-                <div class="swiper-item">
-                  <img
-                    src="./images/logo/next.svg"
-                    alt="logo"
-                    aria-hidden="true"
-                  />
-                </div>
-                <div class="swiper-item">
-                  <img
-                    src="./images/logo/node.svg"
-                    alt="logo"
-                    aria-hidden="true"
-                  />
-                </div>
-                <div class="swiper-item">
-                  <img
-                    src="./images/logo/prisma.svg"
-                    alt="logo"
-                    aria-hidden="true"
-                  />
-                </div>
-                <div class="swiper-item">
-                  <img
-                    src="./images/logo/react.svg"
-                    alt="logo"
-                    aria-hidden="true"
-                  />
-                </div>
-                <div class="swiper-item">
-                  <img
-                    src="./images/logo/ruby.svg"
-                    alt="logo"
-                    aria-hidden="true"
-                  />
-                </div>
-                <div class="swiper-item">
-                  <img
-                    src="./images/logo/shopify.svg"
-                    alt="logo"
-                    aria-hidden="true"
-                  />
-                </div>
-                <div class="swiper-item">
-                  <img
-                    src="./images/logo/tailwind.svg"
-                    alt="logo"
-                    aria-hidden="true"
-                  />
-                </div>
-                <div class="swiper-item">
-                  <img
-                    src="./images/logo/typescript.svg"
-                    alt="logo"
-                    aria-hidden="true"
-                  />
+                <div class="swiper-transform">
+                  <div class="swiper-item">
+                    <img
+                      src="./images/logo/android.svg"
+                      alt="logo"
+                      aria-hidden="true"
+                    />
+                  </div>
+                  <div class="swiper-item">
+                    <img
+                      src="./images/logo/apple.svg"
+                      alt="logo"
+                      aria-hidden="true"
+                    />
+                  </div>
+                  <div class="swiper-item">
+                    <img
+                      src="./images/logo/aws.svg"
+                      alt="logo"
+                      aria-hidden="true"
+                    />
+                  </div>
+                  <div class="swiper-item">
+                    <img
+                      src="./images/logo/github.svg"
+                      alt="logo"
+                      aria-hidden="true"
+                    />
+                  </div>
+                  <div class="swiper-item">
+                    <img
+                      src="./images/logo/html.svg"
+                      alt="logo"
+                      aria-hidden="true"
+                    />
+                  </div>
+                  <div class="swiper-item">
+                    <img
+                      src="./images/logo/next.svg"
+                      alt="logo"
+                      aria-hidden="true"
+                    />
+                  </div>
+                  <div class="swiper-item">
+                    <img
+                      src="./images/logo/node.svg"
+                      alt="logo"
+                      aria-hidden="true"
+                    />
+                  </div>
+                  <div class="swiper-item">
+                    <img
+                      src="./images/logo/prisma.svg"
+                      alt="logo"
+                      aria-hidden="true"
+                    />
+                  </div>
+                  <div class="swiper-item">
+                    <img
+                      src="./images/logo/react.svg"
+                      alt="logo"
+                      aria-hidden="true"
+                    />
+                  </div>
+                  <div class="swiper-item">
+                    <img
+                      src="./images/logo/ruby.svg"
+                      alt="logo"
+                      aria-hidden="true"
+                    />
+                  </div>
+                  <div class="swiper-item">
+                    <img
+                      src="./images/logo/shopify.svg"
+                      alt="logo"
+                      aria-hidden="true"
+                    />
+                  </div>
+                  <div class="swiper-item">
+                    <img
+                      src="./images/logo/tailwind.svg"
+                      alt="logo"
+                      aria-hidden="true"
+                    />
+                  </div>
+                  <div class="swiper-item">
+                    <img
+                      src="./images/logo/typescript.svg"
+                      alt="logo"
+                      aria-hidden="true"
+                    />
+                  </div>
                 </div>
               </div>
             </div>
