💄 add text color gradient

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
     <div class="info">
       <div class="w-full max-w-[50rem] m-auto relative px-5">
         <div>
-          <h1 class="my-12">
+          <h1 class="my-12 text-color-animation">
             반갑습니다,
             <br />
             저는 조해인입니다
