--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,7 @@
   </head>
   <body>
     <!-- Header navigation -->
-    <nav
-      class="fixed left-0 top-0 right-0 bottom-auto z-10 bg-[#FBFBFD]/[.8] bg-[#000]/[.8] text-[#ecedee] backdrop-saturate-[180%] backdrop-blur-[20px]"
-    >
+    <nav class="nav">
       <div class="px-2 py-1">
         <div class="flex justify-center items-center">
           <ul class="flex flex-row justify-center items-center space-x-2">
@@ -29,17 +27,18 @@
       </div>
     </nav>
     <!-- Intro -->
-    <div class="h-[100vh] w-full bg-[wheat]"></div>
+    <div class="h-[100vh] w-full"></div>
     <!-- Info -->
     <div class="info">
       <div class="w-full max-w-[50rem] m-auto relative px-5">
         <div>
-          <h1 class="my-12 text-color-animation">
-            반갑습니다,
-            <br />
-            저는 조해인입니다
-            <span class="period-mark">.</span>
-          </h1>
+          <div class="my-12">
+            <h1 class="text-color-animation">반갑습니다,</h1>
+            <h1>
+              저는 조해인입니다
+              <span class="period-mark">.</span>
+            </h1>
+          </div>
           <p class="big-paragraph">
             서울에서 5년차 웹 프론트엔드 엔지니어로 일하고 있으며 아름다운
             인터페이스와 애니메이션을 구현하는 것을 좋아합니다. 개발자의 가치는
@@ -50,7 +49,7 @@
         <div class="hero-logos mt-[75px] mb-[50px] sm:mt-[150px] sm:mb-[100px]">
           <div class="relative">
             <div
-              class="absolute top-0 left-0 right-0 bottom-0 bg-hero-logo z-[1]"
+              class="hero-logo-gradient absolute top-0 left-0 right-0 bottom-0 z-[1]"
             ></div>
             <div class="swiper max-w-[740px] m-auto overflow-hidden">
               <div
@@ -249,12 +248,12 @@
         <div class="w-full relative overflow-hidden">
           <!-- this is for line seperator -->
           <div
-            class="absolute top-[-100%] left-0 bottom-[-100%] w-full bg-line-seperator"
+            class="line-seperator-gradient absolute top-[-100%] left-0 bottom-[-100%] w-full"
           ></div>
           <div>
             <!-- work experience -->
             <div>
-              <h2 class="pt-16 pb-8 bg-white relative">
+              <h2 class="panel pt-16 pb-8 relative">
                 Work Experience<span class="period-mark">.</span>
               </h2>
               <div class="row">
@@ -351,7 +350,7 @@
             <div class="line-seperator"></div>
             <!-- other experience -->
             <div class="other-experience">
-              <h2 class="pt-16 pb-8 bg-white relative">
+              <h2 class="pt-16 pb-8 panel relative">
                 Other Experience<span class="period-mark">.</span>
               </h2>
               <div class="other">
@@ -384,7 +383,7 @@
             <div class="line-seperator"></div>
             <!-- skill -->
             <div class="skill">
-              <h2 class="pt-16 pb-8 bg-white relative">
+              <h2 class="panel pt-16 pb-8 relative">
                 Skills<span class="period-mark">.</span>
               </h2>
               <div class="other">
