💄 get ready for svg path animation

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
             xmlns="http://www.w3.org/2000/svg"
           >
             <defs>
-              <linearGradient
+              <!-- <linearGradient
                 id="logo-gradient"
                 x1="0%"
                 y1="50%"
@@ -67,11 +67,11 @@
                   stop-color="#fefeb5"
                   stop-opacity="0.6"
                 ></stop>
-              </linearGradient>
-              <!-- blueviolet, aqua, aquamarine, blue, brown -->
-              <!-- <linearGradient id="logo-gradient">
-                <stop stop-color="blueviolet" />
               </linearGradient> -->
+              <!-- blueviolet, aqua, aquamarine, blue, brown -->
+              <linearGradient id="logo-gradient">
+                <stop stop-color="blueviolet" />
+              </linearGradient>
             </defs>
             <g id="outline">
               <g class="letter_take">
