⚰️ archive takeover js

--- a/src/index.html
+++ b/src/index.html
@@ -888,7 +888,7 @@
       <!-- Close -->
     </banner-highlight>
 
-    <script type="module" src="./script/takeover.js"></script>
+    <!-- <script type="module" src="./script/takeover.js"></script> -->
     <script type="module" src="./script/script.js"></script>
   </body>
 </html>
