💄 split animation scene

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,16 @@
             class="canvas-animation-01 sticky top-0 left-0 outline-0 w-full h-full max-h-screen z-[1]"
           ></canvas>
           <canvas
-            class="canvas-animation-02 absolute top-0 left-0 outline-0 w-full h-full max-h-screen z-[1] hidden"
+            class="canvas-animation-02 absolute top-0 left-0 outline-0 w-full h-full max-h-screen z-[1] bg-black hidden"
+          ></canvas>
+          <canvas
+            class="canvas-animation-03 absolute top-0 left-0 outline-0 w-full h-full max-h-screen z-[1] bg-black hidden"
+          ></canvas>
+          <canvas
+            class="canvas-animation-04 absolute top-0 left-0 outline-0 w-full h-full max-h-screen z-[1] hidden"
+          ></canvas>
+          <canvas
+            class="canvas-animation-05 absolute top-0 left-0 outline-0 w-full h-full max-h-screen z-[1] hidden"
           ></canvas>
           <div
             class="svg-wrapper svg-path-intro flex items-center justify-center"
