👷 ready for AWS launching

--- a/src/index.html
+++ b/src/index.html
@@ -803,8 +803,8 @@
                   <div class="other-item">
                     <ul>
                       <li>
-                        Front-End: JavaScript, TypeScript, React.js, Next.js,
-                        HTML/CSS, React Native
+                        Front-End: HTML5, CSS3, JavaScript, TypeScript,
+                        React.js, Next.js, React Native
                       </li>
                       <li>Back-End: Node.js, AWS (EC2, S3)</li>
                       <li>Database: SQLite, MySQL, Prisma</li>
